# gRPC-Cpp

./: README.md
Calculator/: README.md
Calculator/client/: CMakeLists.txt
Calculator/client/proto/: Calculator.proto
Calculator/client/src/: client.cpp
Calculator/server/: CMakeLists.txt
Calculator/server/proto/: Calculator.proto
Calculator/server/src/: Calculator.grpc.pb.cc  Calculator.grpc.pb.h  Calculator.pb.cc  Calculator.pb.h  server.cpp
Client Stream/client/: CMakeLists.txt
Client Stream/client/proto/: ClientStream.proto
Client Stream/client/src/: ClientStream.pb.cc  client.cpp
Client Stream/server/: CMakeLists.txt
Client Stream/server/src/: ClientStream.grpc.pb.cc  ClientStream.grpc.pb.h  ClientStream.pb.h  server.cpp
Unary/: README.md
Unary/client/: CMakeLists.txt
Unary/client/proto/: unaryMessage.proto
Unary/client/src/: client.cpp  unaryMessage.grpc.pb.cc  unaryMessage.grpc.pb.h  unaryMessage.pb.cc  unaryMessage.pb.h
Unary/server/: CMakeLists.txt
Unary/server/src/: server.cpp  unaryMessage.pb.cc
